# pi-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: pi-rust-update-agent.md
.claude/hooks/: update-docs.sh
.claude/skills/fresh-start/: SKILL.md
.claude/skills/sync/: SKILL.md
crates/pi-agent-core/: Cargo.toml
crates/pi-agent-core/src/: agent_loop.rs  lib.rs  types.rs
crates/pi-agent-core/tests/: agent_loop.rs
crates/pi-ai/: Cargo.toml
crates/pi-ai/examples/: openai_compatible_demo.rs
crates/pi-ai/src/: api_registry.rs  config.rs  error.rs  lib.rs  message.rs  provider.rs  stream.rs  types.rs
crates/pi-ai/src/providers/: faux.rs  mock.rs  mod.rs  openai_compatible.rs
docs/: pi-agent-core-spec.md  pi-ai-spec.md  pi-ai-usage.md  pi-tui-spec.md
