[package]
name = "pi-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["sync"] }
tokio-stream = "0.1.18"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
